snapshots/DeepSpeech/native_client/kenlm/util/float_to_string.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 25
kind: unit
spaces:
  - name: util
    start_line: 7
    end_line: 23
    kind: namespace
    spaces:
      - name: ToStringBuf<double>
        start_line: 9
        end_line: 12
        kind: struct
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 8
            total_operators: 8
            unique_operands: 3
            total_operands: 3
            length: 11
            estimated_program_length: 28.755
            purity_ratio: 2.614
            vocabulary: 11
            volume: 38.054
            difficulty: 4
            level: 0.25
            effort: 152.215
            time: 8.456
            bugs: 0.01
          loc:
            sloc: 4
            ploc: 3
            lloc: 0
            cloc: 1
            blank: 0
            sloc_average: 4
            ploc_average: 3
            lloc_average: 0
            cloc_average: 1
            blank_average: 0
            sloc_min: 4
            sloc_max: 4
            cloc_min: 1
            cloc_max: 1
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 14
            average: 14
            min: 14
            max: 14
          mi:
            original: 129.389
            sei: 160.779
            visual_studio: 75.666
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          wmc:
            class_wmc_sum: 0
            interface_wmc_sum: 0
            total: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 1
            interface_npa_sum: 0
            class_attributes: 1
            interface_attributes: 0
            class_cda: 1
            interface_cda: 0
            total: 1
            total_attributes: 1
            cda: 1
      - name: ToStringBuf<float>
        start_line: 16
        end_line: 18
        kind: struct
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 8
            total_operators: 8
            unique_operands: 3
            total_operands: 3
            length: 11
            estimated_program_length: 28.755
            purity_ratio: 2.614
            vocabulary: 11
            volume: 38.054
            difficulty: 4
            level: 0.25
            effort: 152.215
            time: 8.456
            bugs: 0.01
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 14
            average: 14
            min: 14
            max: 14
          mi:
            original: 134.05
            sei: 117.794
            visual_studio: 78.392
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          wmc:
            class_wmc_sum: 0
            interface_wmc_sum: 0
            total: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 1
            interface_npa_sum: 0
            class_attributes: 1
            interface_attributes: 0
            class_cda: 1
            interface_cda: 0
            total: 1
            total_attributes: 1
            cda: 1
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        value: 1
        average: 3
        min: 1
        max: 1
        modified:
          sum: 3
          value: 1
          average: 3
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 39
        unique_operands: 7
        total_operands: 13
        length: 52
        estimated_program_length: 67.757
        purity_ratio: 1.303
        vocabulary: 20
        volume: 224.74
        difficulty: 12.071
        level: 0.083
        effort: 2712.936
        time: 150.719
        bugs: 0.065
      loc:
        sloc: 17
        ploc: 10
        lloc: 2
        cloc: 3
        blank: 4
        sloc_average: 5.667
        ploc_average: 3.333
        lloc_average: 0.667
        cloc_average: 1
        blank_average: 1.333
        sloc_min: 3
        sloc_max: 17
        cloc_min: 0
        cloc_max: 3
        ploc_min: 3
        ploc_max: 10
        lloc_min: 0
        lloc_max: 2
        blank_min: 0
        blank_max: 4
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 64
        average: 21.333
        min: 14
        max: 36
      mi:
        original: 96.254
        sei: 74.612
        visual_studio: 56.289
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 2
        interface_npa_sum: 0
        class_attributes: 2
        interface_attributes: 0
        class_cda: 1
        interface_cda: 0
        total: 2
        total_attributes: 2
        cda: 1
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 4
    value: 1
    average: 4
    min: 1
    max: 1
    modified:
      sum: 4
      value: 1
      average: 4
      min: 1
      max: 1
  halstead:
    unique_operators: 13
    total_operators: 39
    unique_operands: 9
    total_operands: 16
    length: 55
    estimated_program_length: 76.635
    purity_ratio: 1.393
    vocabulary: 22
    volume: 245.269
    difficulty: 11.556
    level: 0.087
    effort: 2834.217
    time: 157.456
    bugs: 0.067
  loc:
    sloc: 25
    ploc: 14
    lloc: 2
    cloc: 6
    blank: 7
    sloc_average: 6.25
    ploc_average: 3.5
    lloc_average: 0.5
    cloc_average: 1.5
    blank_average: 1.75
    sloc_min: 3
    sloc_max: 25
    cloc_min: 0
    cloc_max: 6
    ploc_min: 3
    ploc_max: 14
    lloc_min: 0
    lloc_max: 2
    blank_min: 0
    blank_max: 7
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 73
    average: 18.25
    min: 9
    max: 36
  mi:
    original: 89.322
    sei: 101.832
    visual_studio: 52.235
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 2
    interface_npa_sum: 0
    class_attributes: 2
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 2
    total_attributes: 2
    cda: 1
