snapshots/DeepSpeech/native_client/kenlm/util/have.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 13
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 0
    total_operators: 0
    unique_operands: 4
    total_operands: 5
    length: 5
    estimated_program_length: 8
    purity_ratio: 1.6
    vocabulary: 4
    volume: 10
    difficulty: 0
    level: 0
    effort: 0
    time: 0
    bugs: 0
  loc:
    sloc: 13
    ploc: 8
    lloc: 0
    cloc: 3
    blank: 3
    sloc_average: 13
    ploc_average: 8
    lloc_average: 0
    cloc_average: 3
    blank_average: 3
    sloc_min: 13
    sloc_max: 13
    cloc_min: 3
    cloc_max: 3
    ploc_min: 8
    ploc_max: 8
    lloc_min: 0
    lloc_max: 0
    blank_min: 3
    blank_max: 3
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 15
    average: 15
    min: 15
    max: 15
  mi:
    original: 117.244
    sei: 139.367
    visual_studio: 68.564
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
