snapshots/DeepSpeech/native_client/kenlm/util/joint_sort_test.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 62
kind: unit
spaces:
  - name: util
    start_line: 6
    end_line: 62
    kind: namespace
    spaces:
      - name: ~
        start_line: 6
        end_line: 62
        kind: namespace
        spaces:
          - name: BOOST_AUTO_TEST_CASE
            start_line: 8
            end_line: 18
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 1
                total_closures: 0
                average_functions: 1
                average_closures: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                n1: 12
                N1: 50
                n2: 11
                N2: 41
                length: 91
                estimated_program_length: 81.073
                purity_ratio: 0.891
                vocabulary: 23
                volume: 411.644
                difficulty: 22.364
                level: 0.045
                effort: 9205.86
                time: 511.437
                bugs: 0.146
              loc:
                sloc: 11
                ploc: 11
                lloc: 11
                cloc: 0
                blank: 0
                sloc_average: 11
                ploc_average: 11
                lloc_average: 11
                cloc_average: 0
                blank_average: 0
                sloc_min: 11
                sloc_max: 11
                cloc_min: 0
                cloc_max: 0
                ploc_min: 11
                ploc_max: 11
                lloc_min: 11
                lloc_max: 11
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 108
                tokens_average: 108
                tokens_min: 108
                tokens_max: 108
              mi:
                mi_original: 100.619
                mi_sei: 69.564
                mi_visual_studio: 58.842
              abc:
                assignments: 4
                branches: 5
                conditions: 0
                magnitude: 6.403
                assignments_average: 4
                branches_average: 5
                conditions_average: 0
                assignments_min: 4
                assignments_max: 4
                branches_min: 5
                branches_max: 5
                conditions_min: 0
                conditions_max: 0
          - name: BOOST_AUTO_TEST_CASE
            start_line: 20
            end_line: 30
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 1
                total_closures: 0
                average_functions: 1
                average_closures: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                n1: 12
                N1: 52
                n2: 13
                N2: 43
                length: 95
                estimated_program_length: 91.125
                purity_ratio: 0.959
                vocabulary: 25
                volume: 441.166
                difficulty: 19.846
                level: 0.05
                effort: 8755.455
                time: 486.414
                bugs: 0.142
              loc:
                sloc: 11
                ploc: 11
                lloc: 12
                cloc: 0
                blank: 0
                sloc_average: 11
                ploc_average: 11
                lloc_average: 12
                cloc_average: 0
                blank_average: 0
                sloc_min: 11
                sloc_max: 11
                cloc_min: 0
                cloc_max: 0
                ploc_min: 11
                ploc_max: 11
                lloc_min: 12
                lloc_max: 12
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 112
                tokens_average: 112
                tokens_min: 112
                tokens_max: 112
              mi:
                mi_original: 100.259
                mi_sei: 69.044
                mi_visual_studio: 58.631
              abc:
                assignments: 6
                branches: 4
                conditions: 0
                magnitude: 7.211
                assignments_average: 6
                branches_average: 4
                conditions_average: 0
                assignments_min: 6
                assignments_max: 6
                branches_min: 4
                branches_max: 4
                conditions_min: 0
                conditions_max: 0
          - name: BOOST_AUTO_TEST_CASE
            start_line: 32
            end_line: 48
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 1
                total_closures: 0
                average_functions: 1
                average_closures: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                n1: 12
                N1: 78
                n2: 15
                N2: 69
                length: 147
                estimated_program_length: 101.623
                purity_ratio: 0.691
                vocabulary: 27
                volume: 698.968
                difficulty: 27.6
                level: 0.036
                effort: 19291.53
                time: 1071.752
                bugs: 0.24
              loc:
                sloc: 17
                ploc: 17
                lloc: 19
                cloc: 0
                blank: 0
                sloc_average: 17
                ploc_average: 17
                lloc_average: 19
                cloc_average: 0
                blank_average: 0
                sloc_min: 17
                sloc_max: 17
                cloc_min: 0
                cloc_max: 0
                ploc_min: 17
                ploc_max: 17
                lloc_min: 19
                lloc_max: 19
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 176
                tokens_average: 176
                tokens_min: 176
                tokens_max: 176
              mi:
                mi_original: 90.814
                mi_sei: 55.418
                mi_visual_studio: 53.108
              abc:
                assignments: 8
                branches: 9
                conditions: 0
                magnitude: 12.042
                assignments_average: 8
                branches_average: 9
                conditions_average: 0
                assignments_min: 8
                assignments_max: 8
                branches_min: 9
                branches_max: 9
                conditions_min: 0
                conditions_max: 0
          - name: BOOST_AUTO_TEST_CASE
            start_line: 50
            end_line: 60
            kind: function
            spaces: []
            metrics:
              nargs:
                total_functions: 1
                total_closures: 0
                average_functions: 1
                average_closures: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                n1: 13
                N1: 57
                n2: 13
                N2: 39
                length: 96
                estimated_program_length: 96.211
                purity_ratio: 1.002
                vocabulary: 26
                volume: 451.242
                difficulty: 19.5
                level: 0.051
                effort: 8799.223
                time: 488.846
                bugs: 0.142
              loc:
                sloc: 11
                ploc: 11
                lloc: 9
                cloc: 0
                blank: 0
                sloc_average: 11
                ploc_average: 11
                lloc_average: 9
                cloc_average: 0
                blank_average: 0
                sloc_min: 11
                sloc_max: 11
                cloc_min: 0
                cloc_max: 0
                ploc_min: 11
                ploc_max: 11
                lloc_min: 9
                lloc_max: 9
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 115
                tokens_average: 115
                tokens_min: 115
                tokens_max: 115
              mi:
                mi_original: 100.142
                mi_sei: 68.875
                mi_visual_studio: 58.562
              abc:
                assignments: 0
                branches: 5
                conditions: 0
                magnitude: 5
                assignments_average: 0
                branches_average: 5
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 5
                branches_max: 5
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            total_functions: 4
            total_closures: 0
            average_functions: 1
            average_closures: 0
            total: 4
            average: 1
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 5
            average: 1
            min: 1
            max: 1
            modified:
              sum: 5
              average: 1
              min: 1
              max: 1
          halstead:
            n1: 13
            N1: 238
            n2: 22
            N2: 192
            length: 430
            estimated_program_length: 146.213
            purity_ratio: 0.34
            vocabulary: 35
            volume: 2205.592
            difficulty: 56.727
            level: 0.018
            effort: 125117.202
            time: 6950.956
            bugs: 0.834
          loc:
            sloc: 57
            ploc: 52
            lloc: 51
            cloc: 0
            blank: 5
            sloc_average: 11.4
            ploc_average: 10.4
            lloc_average: 10.2
            cloc_average: 0
            blank_average: 1
            sloc_min: 11
            sloc_max: 17
            cloc_min: 0
            cloc_max: 0
            ploc_min: 11
            ploc_max: 17
            lloc_min: 9
            lloc_max: 19
            blank_min: 0
            blank_max: 0
          nom:
            functions: 4
            closures: 0
            functions_average: 0.8
            closures_average: 0
            total: 4
            average: 0.8
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 514
            tokens_average: 102.8
            tokens_min: 3
            tokens_max: 176
          mi:
            mi_original: 64.319
            mi_sei: 17.601
            mi_visual_studio: 37.613
          abc:
            assignments: 18
            branches: 23
            conditions: 0
            magnitude: 29.206
            assignments_average: 3.6
            branches_average: 4.6
            conditions_average: 0
            assignments_min: 0
            assignments_max: 8
            branches_min: 0
            branches_max: 9
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 4
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 4
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 6
        average: 1
        min: 1
        max: 1
        modified:
          sum: 6
          average: 1
          min: 1
          max: 1
      halstead:
        n1: 13
        N1: 239
        n2: 23
        N2: 193
        length: 432
        estimated_program_length: 152.148
        purity_ratio: 0.352
        vocabulary: 36
        volume: 2233.408
        difficulty: 54.543
        level: 0.018
        effort: 121817.819
        time: 6767.657
        bugs: 0.819
      loc:
        sloc: 57
        ploc: 52
        lloc: 51
        cloc: 0
        blank: 5
        sloc_average: 9.5
        ploc_average: 8.667
        lloc_average: 8.5
        cloc_average: 0
        blank_average: 0.833
        sloc_min: 57
        sloc_max: 57
        cloc_min: 0
        cloc_max: 0
        ploc_min: 52
        ploc_max: 52
        lloc_min: 51
        lloc_max: 51
        blank_min: 5
        blank_max: 5
      nom:
        functions: 4
        closures: 0
        functions_average: 0.667
        closures_average: 0
        total: 4
        average: 0.667
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 518
        tokens_average: 86.333
        tokens_min: 3
        tokens_max: 176
      mi:
        mi_original: 64.024
        mi_sei: 17.277
        mi_visual_studio: 37.441
      abc:
        assignments: 18
        branches: 23
        conditions: 0
        magnitude: 29.206
        assignments_average: 3
        branches_average: 3.833
        conditions_average: 0
        assignments_min: 0
        assignments_max: 8
        branches_min: 0
        branches_max: 9
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 4
    total_closures: 0
    average_functions: 1
    average_closures: 0
    total: 4
    average: 1
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 7
    average: 1
    min: 1
    max: 1
    modified:
      sum: 7
      average: 1
      min: 1
      max: 1
  halstead:
    n1: 13
    N1: 239
    n2: 25
    N2: 195
    length: 434
    estimated_program_length: 164.202
    purity_ratio: 0.378
    vocabulary: 38
    volume: 2277.601
    difficulty: 50.7
    level: 0.02
    effort: 115474.347
    time: 6415.242
    bugs: 0.79
  loc:
    sloc: 62
    ploc: 55
    lloc: 51
    cloc: 1
    blank: 7
    sloc_average: 8.857
    ploc_average: 7.857
    lloc_average: 7.286
    cloc_average: 0.143
    blank_average: 1
    sloc_min: 57
    sloc_max: 57
    cloc_min: 0
    cloc_max: 0
    ploc_min: 52
    ploc_max: 52
    lloc_min: 51
    lloc_max: 51
    blank_min: 5
    blank_max: 5
  nom:
    functions: 4
    closures: 0
    functions_average: 0.571
    closures_average: 0
    total: 4
    average: 0.571
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 527
    tokens_average: 75.286
    tokens_min: 3
    tokens_max: 176
  mi:
    mi_original: 62.33
    mi_sei: 61.052
    mi_visual_studio: 36.45
  abc:
    assignments: 18
    branches: 23
    conditions: 0
    magnitude: 29.206
    assignments_average: 2.571
    branches_average: 3.286
    conditions_average: 0
    assignments_min: 0
    assignments_max: 8
    branches_min: 0
    branches_max: 9
    conditions_min: 0
    conditions_max: 0
  wmc:
    classes: 0
    interfaces: 0
    total: 0
